I made a small change to the styles so that the 2015 will no longer be cut off

--- a/app/assets/stylesheets/_conferences/_europe-2015.scss
+++ b/app/assets/stylesheets/_conferences/_europe-2015.scss
@@ -530,7 +530,7 @@
 			font-weight:600;
 			position: absolute;
 			top: 32px;
-			font-size:20px;
+			font-size:18px;
 			margin-top:-3px;
 			@media (max-width: 550px) {
 				text-align: left;
